# multi_physics_solver

./: CMakeLists.txt  CMakePresets.json  multi_physics_solver.cpp
docs/: MultiPhysicsSimulator.drawio  MultiPhysicsSolver.doxyfile  MultiPhysicsSolver.drawio
include/core/: SolverCore.hpp
include/solver/: FiniteDifference.hpp
lib/: vcpkg.json
src/core/: SolverCore.cpp
src/solver/: FiniteDifference.cpp
